<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/usr_profile_fragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.buddii.ui.usrprofile.UsrProfileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/usr_profile_fragment" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.buddii.ui.usrprofile.UsrProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/usr_profile_fragment" />

    <fragment
        android:id="@+id/nav_map_user"
        android:name="com.example.buddii.ui.usrprofile.UsrProfileFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/usr_profile_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.buddii.ui.usrprofile.UsrProfileFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/usr_profile_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.buddii.ui.usrprofile.UsrProfileFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/usr_profile_fragment" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name=".com.example.buddii.ui"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_tutorial" />

</navigation>